<resources>
    <!-- Home Menu -->
    <string name="app_name">PokeTools-TCG</string>
    <string name="home_menu_button_1">TCG Tools</string>
    <string name="home_menu_button_2">Decks</string>
    <string name="home_menu_button_3">Cards</string>
    <string name="home_menu_button_4">Trade Checker</string>
    <string name="home_menu_button_5">QR Codes</string>
    <string name="home_menu_button_6">Settings</string>

    <!-- Play Tools -->
    <string name="play_tools_btn_timer_1">Start</string>
    <string name="play_tools_btn_timer_2">Restart</string>
    <string name="play_tools_btn_timer_3">Pause</string>
    <string name="play_tools_btn_timer_4">Resume</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero_error">Damage cannot be less than 0</string>
    <string name="high_error">Damage cannot be any higher</string>


    <!-- Condition Names -->
    <string name="cond_asleep">Asleep</string>
    <string name="cond_burned">Burned</string>
    <string name="cond_confused">Confused</string>
    <string name="cond_paralyzed">Paralyzed</string>
    <string name="cond_poisoned">Poisoned</string>

    <!-- Condition Descriptions -->
    <string name="cond_desc_asleep">
        Asleep Pokemon cannot attack or retreat. Turn card on side
        (counterclockwise). After each turn, flip a coin, if heads Pokemon wakes up.
    </string>
    <string name="cond_desc_burned">
        Place 2 damage counters (20) on pokemon between turns. After
        placing counters, flip coin, if heads then pokemon is no longer burned.
    </string>
    <string name="cond_desc_confused">
    When attacking flip a coin, if heads, attack works, if tails then the Pokemon does 20 damage to
        itself. When retreating while confused, discard required energy then flip coin to see if
         retreat is successful(Heads).
    </string>
    <string name="cond_desc_paralyzed">
        Turn card onto its side (clockwise). Paralyzed Pokemon cannot attack or retreat for 1 turn.
        At the end of that turn the Pokemon
         returns to normal.
    </string>
    <string name="cond_desc_poisoned">
        Place 1 damage counter on Pokemon between each turn.
    </string>
    <string name="flip">FLIP</string>
    <string name="coin">coin</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="gx_counter">GX counter</string>
    <string name="_0">0</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="log_in">Log In</string>
    <string name="loading">loading</string>

    <!-- LOGIN + SIGN UP FIREBASE -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="image">image</string>
    <string name="prompt_password">Enter Password</string>

    <!-- FIREBASE -->
    <string name="db_error">An Error occurred</string>
    <string name="db_empty">Nothing found</string>

    <!-- AWS -->
    <string name="cache_endpoint">poketools-tcg.adg7xp.cfg.use2.cache.amazonaws.com</string>
</resources>
