<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rendelaney.poketools_tcg.Home">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ba"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/app_name_txt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="43dp"
            android:background="@color/opaquePurple"
            android:text="PokéTools TCG"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPlayTools"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="181dp"
            android:background="@color/pinkAccent"
            android:text="@string/home_menu_button_1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btnCards"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.764" />

        <Button
            android:id="@+id/btnCards"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPlayTools"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@color/pinkAccent"
            android:text="@string/home_menu_button_3"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btnSettings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btnPlayTools"
            android:layout_marginBottom="95dp"
            android:background="@color/pinkAccent"
            android:text="@string/home_menu_button_6"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPlayTools"
            app:layout_constraintVertical_bias="1.0" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
